// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`srv nock tests srv cert custom instance 0 1`] = `
[
  "certificate-afc-frontend-0.crt",
  "cf [
  'ssh',
  'afc-frontend',
  '--app-instance-index',
  '0',
  '--command',
  'cat $CF_INSTANCE_CERT'
]",
]
`;

exports[`srv nock tests srv cert custom instance 0 2`] = `
[
  "certificate-afc-frontend-0.key",
  "cf [
  'ssh',
  'afc-frontend',
  '--app-instance-index',
  '0',
  '--command',
  'cat $CF_INSTANCE_KEY'
]",
]
`;

exports[`srv nock tests srv cert custom instance 1 1`] = `
[
  "certificate-afc-frontend-1.crt",
  "cf [
  'ssh',
  'afc-frontend',
  '--app-instance-index',
  '1',
  '--command',
  'cat $CF_INSTANCE_CERT'
]",
]
`;

exports[`srv nock tests srv cert custom instance 1 2`] = `
[
  "certificate-afc-frontend-1.key",
  "cf [
  'ssh',
  'afc-frontend',
  '--app-instance-index',
  '1',
  '--command',
  'cat $CF_INSTANCE_KEY'
]",
]
`;

exports[`srv nock tests srv cert default 1`] = `
[
  "certificate-afc-backend-0.crt",
  "cf [
  'ssh',
  'afc-backend',
  '--app-instance-index',
  '0',
  '--command',
  'cat $CF_INSTANCE_CERT'
]",
]
`;

exports[`srv nock tests srv cert default 2`] = `
[
  "certificate-afc-backend-0.key",
  "cf [
  'ssh',
  'afc-backend',
  '--app-instance-index',
  '0',
  '--command',
  'cat $CF_INSTANCE_KEY'
]",
]
`;

exports[`srv nock tests srv env custom 1`] = `
[
  "default-env.json",
  "{
  "VCAP_APPLICATION": {
    "application_id": "188569c2-8a80-4eb2-a80b-4aa58dd40c7b",
    "application_name": "afc-frontend",
    "application_uris": [
      "*.dev-afc-sap.cfapps.sap.hana.ondemand.com",
      "*.dev.eu10-canary.afc.cloud.sap",
      "*.dev.eu10-canary.ugw.afc.cloud.sap"
    ],
    "cf_api": "https://api.cf.sap.hana.ondemand.com",
    "limits": {
      "fds": 32768
    },
    "name": "afc-frontend",
    "organization_id": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
    "organization_name": "skyfin",
    "space_id": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
    "space_name": "dev",
    "uris": [
      "*.dev-afc-sap.cfapps.sap.hana.ondemand.com",
      "*.dev.eu10-canary.afc.cloud.sap",
      "*.dev.eu10-canary.ugw.afc.cloud.sap"
    ],
    "users": null
  },
  "VCAP_SERVICES": {
    "application-logs": [
      {
        "binding_guid": "3a671559-ed67-4778-b853-65a542fc3f0e",
        "binding_name": null,
        "credentials": {},
        "instance_guid": "393a971c-77c1-4930-a373-f7345e2b2527",
        "instance_name": "afc-logs",
        "label": "application-logs",
        "name": "afc-logs",
        "plan": "standard",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      }
    ],
    "business-logging": [
      {
        "binding_guid": "93a2e4ea-1c85-4a8d-8ed5-3ceedd2213e8",
        "binding_name": null,
        "credentials": {
          "LPSCallbackDependencyName": "businesslogging-sb-prod",
          "configUrl": "https://buslog-prod-business-logging-core-service-appconfig.cfapps.sap.hana.ondemand.com/",
          "configurationPath": "buslogs/configs",
          "content_endpoint": "https://buslog-prod-business-logging-core-service-appconfig.cfapps.sap.hana.ondemand.com/buslogs/content",
          "endpoints": {
            "configservice": "https://buslog-prod-business-logging-core-service-appconfig.cfapps.sap.hana.ondemand.com/buslogs/configs",
            "readservice": "https://buslog-prod-business-logging-odata-service.cfapps.sap.hana.ondemand.com/odata/v2/com.sap.bs.businesslogging.DisplayMessage",
            "readservicev4": "https://buslog-prod-business-logging-odata-service.cfapps.sap.hana.ondemand.com/odata/v4/com.sap.bs.businesslogging.DisplayMessage",
            "textresourceservice": "https://buslog-prod-business-logging-core-service-appconfig.cfapps.sap.hana.ondemand.com/buslogs/configs/textresource",
            "writeservice": "https://buslog-prod-business-logging-write-service.cfapps.sap.hana.ondemand.com/buslogs/log"
          },
          "host": "business-logging-0-credentials-host",
          "html5-apps-repo": {
            "app_host_id": "99fe3965-708a-43bf-9fdf-33206e55010c"
          },
          "instanceId": "3c6e7048-f419-45ab-861b-1d500ed9a872",
          "readLogPath": "/odata/v2/com.sap.bs.businesslogging.DisplayMessage",
          "readLogPathv4": "/odata/v4/com.sap.bs.businesslogging.DisplayMessage",
          "readUrl": "https://buslog-prod-business-logging-odata-service.cfapps.sap.hana.ondemand.com/",
          "saasregistryappname": "businesslogging-sb-prod",
          "saasregistryenabled": true,
          "sap.cloud.service": "com.sap.bs.businesslogging",
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "certificate": "business-logging-0-credentials-uaa-certificate",
            "certificate-pinning": true,
            "certurl": "https://skyfin.authentication.cert.sap.hana.ondemand.com/",
            "clientid": "business-logging-0-credentials-uaa-clientid",
            "clientx509enabled": false,
            "credential-type": "x509",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "key": "business-logging-0-credentials-uaa-key",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "3c6e7048-f419-45ab-861b-1d500ed9a872",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "dedicated",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "business-logging-0-credentials-uaa-verificationkey",
            "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          },
          "vendor": "SAP",
          "writeLogPath": "buslogs/log",
          "writeUrl": "https://buslog-prod-business-logging-write-service.cfapps.sap.hana.ondemand.com/"
        },
        "instance_guid": "3c6e7048-f419-45ab-861b-1d500ed9a872",
        "instance_name": "afc-business-logging",
        "label": "business-logging",
        "name": "afc-business-logging",
        "plan": "default",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "business-logging",
          "logging",
          "com.sap.appbasic.businesslogs",
          "comsapappbasicbusinesslogs"
        ],
        "volume_mounts": []
      }
    ],
    "dynatrace": [
      {
        "binding_guid": "c5ef7707-1c62-4067-be85-e753068cb750",
        "binding_name": null,
        "credentials": {
          "apitoken": "dynatrace-0-credentials-apitoken",
          "apiurl": "https://canary.eu10.apm.services.cloud.sap/e/99479865-a86b-4792-a740-fc62388b3496/api",
          "environmentid": "99479865-a86b-4792-a740-fc62388b3496",
          "ingest_apitoken": "dynatrace-0-credentials-ingest_apitoken",
          "skiperrors": "true",
          "token_expiry": "dynatrace-0-credentials-token_expiry"
        },
        "instance_guid": "b37ed912-457a-43da-856c-20ded42fd748",
        "instance_name": "afc-dynatrace",
        "label": "dynatrace",
        "name": "afc-dynatrace",
        "plan": "environment",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "dynatrace"
        ],
        "volume_mounts": []
      }
    ],
    "html5-apps-repo": [
      {
        "binding_guid": "c01f9888-c3bb-4d31-a652-c31f9f752898",
        "binding_name": null,
        "credentials": {
          "bindable": true,
          "grant_type": "client_credentials",
          "metadata": {
            "supportsInstanceSharing": true
          },
          "saasregistryenabled": true,
          "sap.cloud.service": "html5-apps-repo-rt",
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "certificate": "html5-apps-repo-0-credentials-uaa-certificate",
            "certificate-pinning": true,
            "certurl": "https://skyfin.authentication.cert.sap.hana.ondemand.com/",
            "clientid": "html5-apps-repo-0-credentials-uaa-clientid",
            "clientx509enabled": false,
            "credential-type": "x509",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "key": "html5-apps-repo-0-credentials-uaa-key",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "4457fe63-ba67-42be-80c6-ce16066c80ca",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "dedicated",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "html5-apps-repo-0-credentials-uaa-verificationkey",
            "xsappname": "4457fe63-ba67-42be-80c6-ce16066c80ca!b5874|html5-apps-repo-uaa!b1129",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          },
          "uri": "https://html5-apps-repo-rt.cfapps.sap.hana.ondemand.com/",
          "vendor": "SAP"
        },
        "instance_guid": "4457fe63-ba67-42be-80c6-ce16066c80ca",
        "instance_name": "afc-html5-repo-runtime",
        "label": "html5-apps-repo",
        "name": "afc-html5-repo-runtime",
        "plan": "app-runtime",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "html5appsrepo",
          "html5-apps-repo-rt",
          "html5-apps-rt",
          "html5-apps-repo-dt",
          "html5-apps-dt"
        ],
        "volume_mounts": []
      }
    ],
    "identity": [
      {
        "binding_guid": "29b32515-589a-4e11-b58e-6d28dc36cc20",
        "binding_name": null,
        "credentials": {
          "app_tid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "authorization_endpoint": "https://awdsp8ef4.accounts400.ondemand.com/oauth2/authorize",
          "btp-tenant-api": "https://api.authentication.sap.hana.ondemand.com",
          "certificate": "identity-0-credentials-certificate",
          "certificate_expires_at": "2026-09-23T20:03:21Z",
          "clientid": "identity-0-credentials-clientid",
          "credential-type": "X509_GENERATED",
          "domain": "accounts400.ondemand.com",
          "domains": [
            "accounts400.ondemand.com",
            "accounts400.cloud.sap"
          ],
          "end_session_endpoint": "https://awdsp8ef4.accounts400.ondemand.com/oauth2/logout",
          "key": "identity-0-credentials-key",
          "url": "https://awdsp8ef4.accounts400.ondemand.com/"
        },
        "instance_guid": "f999651e-8c35-467b-822e-518554570a04",
        "instance_name": "afc-ias",
        "label": "identity",
        "name": "afc-ias",
        "plan": "application",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      }
    ],
    "portal": [
      {
        "binding_guid": "4538d190-0d9b-411e-9916-374fc7dae495",
        "binding_name": null,
        "credentials": {
          "endpoints": {
            "portal-service": "https://portal-service.cfapps.sap.hana.ondemand.com",
            "token-service": "portal-0-credentials-endpoints-token-service"
          },
          "fdc_app_host_id": "77d1971b-3fdc-45e0-8da3-f7b719dfff86",
          "forwardiastoken": true,
          "html5-apps-repo": {
            "app_host_id": "85cd3f98-4345-42bd-b425-364c144d0e0e,570d7b41-113a-469b-ae5f-7ba55967aed4,c693e508-f8d5-4a70-be60-cb6106d0b60e,77d1971b-3fdc-45e0-8da3-f7b719dfff86"
          },
          "instance_id": "b4700476-0b63-4eea-add7-2873a2fc4f0b",
          "saasregistryenabled": true,
          "sap.cloud.service": "com.sap.ui.portal",
          "sap.cloud.service.alias": "cp",
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "certificate": "portal-0-credentials-uaa-certificate",
            "certificate-pinning": true,
            "certurl": "https://skyfin.authentication.cert.sap.hana.ondemand.com/",
            "clientid": "portal-0-credentials-uaa-clientid",
            "clientx509enabled": false,
            "credential-type": "x509",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "key": "portal-0-credentials-uaa-key",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "b4700476-0b63-4eea-add7-2873a2fc4f0b",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "dedicated",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "portal-0-credentials-uaa-verificationkey",
            "xsappname": "b4700476-0b63-4eea-add7-2873a2fc4f0b!b5874|portal-cf-service!b119",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          }
        },
        "instance_guid": "b4700476-0b63-4eea-add7-2873a2fc4f0b",
        "instance_name": "afc-flp",
        "label": "portal",
        "name": "afc-flp",
        "plan": "standard",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "cp",
          "portal",
          "portal-service"
        ],
        "volume_mounts": []
      }
    ],
    "redis-cache": [
      {
        "binding_guid": "4588eda4-1689-474c-982c-1acb5a6d9848",
        "binding_name": null,
        "credentials": {
          "cluster_mode": true,
          "hostname": "clustercfg.rg-0c94f0c1-db0a-495d-b385-4a44a87fc398.vwvwdz.euc1.cache.amazonaws.com",
          "password": "redis-cache-0-credentials-password",
          "port": 3991,
          "tls": true,
          "uri": "rediss://:redis-cache-0-credentials-uri-password@clustercfg.rg-0c94f0c1-db0a-495d-b385-4a44a87fc398.vwvwdz.euc1.cache.amazonaws.com:3991",
          "urls": {
            "api_server": "https://api-backing-services.eu10-canary.data.services.cloud.sap"
          }
        },
        "instance_guid": "0c94f0c1-db0a-495d-b385-4a44a87fc398",
        "instance_name": "afc-redis",
        "label": "redis-cache",
        "name": "afc-redis",
        "plan": "standard",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "cache"
        ],
        "volume_mounts": []
      }
    ],
    "theming": [
      {
        "binding_guid": "10463842-23c8-44cc-8600-e4146638447d",
        "binding_name": null,
        "credentials": {
          "endpoints": {
            "repository": "https://theming-repository.cfapps.sap.hana.ondemand.com",
            "runtime": "https://theming-runtime.cfapps.sap.hana.ondemand.com"
          },
          "html5-apps-repo": {
            "app_host_id": "251a90ce-8798-4191-9828-4d4ac97e4ea9"
          },
          "saasregistryappname": "theming",
          "sap.cloud.service": "com.sap.ui.theming",
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "clientid": "theming-0-credentials-uaa-clientid",
            "clientsecret": "theming-0-credentials-uaa-clientsecret",
            "credential-type": "binding-secret",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "e6168484-4a7c-480b-b418-fefcf45afba8",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "dedicated",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "theming-0-credentials-uaa-verificationkey",
            "xsappname": "e6168484-4a7c-480b-b418-fefcf45afba8!b5874|sap-theming!b2675",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          },
          "uri": "https://theming-runtime.cfapps.sap.hana.ondemand.com/",
          "vendor": "SAP"
        },
        "instance_guid": "e6168484-4a7c-480b-b418-fefcf45afba8",
        "instance_name": "afc-theming",
        "label": "theming",
        "name": "afc-theming",
        "plan": "standard",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "sap-theming"
        ],
        "volume_mounts": []
      }
    ],
    "ui5-flexibility-keyuser": [
      {
        "binding_guid": "d2e7b5ae-66be-407a-91c6-5d058f91264f",
        "binding_name": null,
        "credentials": {
          "endpoints": {
            "keyuser": "ui5-flexibility-keyuser-0-credentials-endpoints-keyuser"
          },
          "grant_type": "user_token",
          "saasregistryenabled": true,
          "sap.cloud.service": "com.sap.ui.flex.cf.keyuser",
          "sap.cloud.service.alias": "flexkeyuser",
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "certificate": "ui5-flexibility-keyuser-0-credentials-uaa-certificate",
            "certificate-pinning": true,
            "certurl": "https://skyfin.authentication.cert.sap.hana.ondemand.com/",
            "clientid": "ui5-flexibility-keyuser-0-credentials-uaa-clientid",
            "clientx509enabled": false,
            "credential-type": "x509",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "key": "ui5-flexibility-keyuser-0-credentials-uaa-key",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "04d135c3-cde3-4394-9ee5-b90561e5bcf0",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "dedicated",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "ui5-flexibility-keyuser-0-credentials-uaa-verificationkey",
            "xsappname": "04d135c3-cde3-4394-9ee5-b90561e5bcf0!b5874|ui5-flexibility-keyuser!b1506",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          },
          "url": "https://ui5-flexibility-keyuser.cfapps.sap.hana.ondemand.com/",
          "vendor": "SAP"
        },
        "instance_guid": "04d135c3-cde3-4394-9ee5-b90561e5bcf0",
        "instance_name": "afc-ui5-flexibility-keyuser",
        "label": "ui5-flexibility-keyuser",
        "name": "afc-ui5-flexibility-keyuser",
        "plan": "keyuser",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "flex-keyuser"
        ],
        "volume_mounts": []
      }
    ],
    "user-provided": [
      {
        "binding_guid": "0e60897d-1897-4b3d-993e-981230846ae7",
        "binding_name": null,
        "credentials": {
          "endpoints": {
            "credentials_url": "https://clm-sl-ans-canary-ans-service-api.cfapps.sap.hana.ondemand.com/api",
            "notifications_mtls_url": "https://clm-sl-ans-canary-ans-service-api.mesh.cf.sap.hana.ondemand.com/",
            "notifications_url": "https://clm-sl-ans-canary-ans-service-api.cfapps.sap.hana.ondemand.com/",
            "websockets_url": "https://clm-sl-ans-canary-ans-service-api.cfapps.sap.hana.ondemand.com/"
          },
          "grant_type": "user_token",
          "saasregistryenabled": true,
          "sap.cloud.service": "alert-notification",
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "clientid": "user-provided-0-credentials-uaa-clientid",
            "clientsecret": "user-provided-0-credentials-uaa-clientsecret",
            "credential-type": "binding-secret",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "e9f2bb15-1b46-4ea6-8530-a89508081ec4",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "shared",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "user-provided-0-credentials-uaa-verificationkey",
            "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          }
        },
        "instance_guid": "44cd8c4e-b1f3-4e69-a4fb-79e95570c017",
        "instance_name": "afc-ans-user-maintained",
        "label": "user-provided",
        "name": "afc-ans-user-maintained",
        "syslog_drain_url": null,
        "tags": [
          "alert-notification"
        ],
        "volume_mounts": []
      },
      {
        "binding_guid": "51450433-74cf-4c04-8976-af3f1a1fb78f",
        "binding_name": null,
        "credentials": {
          "instanceName": "afc-redis",
          "sessionSecret": "user-provided-1-credentials-sessionSecret",
          "storageType": "redis"
        },
        "instance_guid": "a8c5e8fe-6ea6-44be-8616-17689195d19c",
        "instance_name": "afc-session-config",
        "label": "user-provided",
        "name": "afc-session-config",
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      },
      {
        "binding_guid": "b92c0eb7-3724-403e-8a8b-10ebd9080e06",
        "binding_name": null,
        "credentials": {},
        "instance_guid": "9c12b0fb-ab43-46fc-94e4-82eab5e541ce",
        "instance_name": "afc-logging-hub",
        "label": "user-provided",
        "name": "afc-logging-hub",
        "syslog_drain_url": "https://user-provided-2-syslog_drain_url-username:user-provided-2-syslog_drain_url-password@ingest-sf-068034bc-13cf-4be3-9589-3a751c760bea.cls-01.cloud.logs.services.sap.hana.ondemand.com/cfsyslog",
        "tags": [
          "cloud-logging"
        ],
        "volume_mounts": []
      }
    ],
    "xsuaa": [
      {
        "binding_guid": "169523c6-8a9c-47ba-bc61-bccc8d813399",
        "binding_name": null,
        "credentials": {
          "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
          "certificate": "xsuaa-0-credentials-certificate",
          "certificate-pinning": true,
          "certurl": "https://skyfin.authentication.cert.sap.hana.ondemand.com/",
          "clientid": "xsuaa-0-credentials-clientid",
          "clientx509enabled": false,
          "credential-type": "x509",
          "identityzone": "skyfin",
          "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "key": "xsuaa-0-credentials-key",
          "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
          "serviceInstanceId": "e020b20a-eb23-4475-91ec-d525f8738fd7",
          "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "tenantmode": "shared",
          "uaadomain": "authentication.sap.hana.ondemand.com",
          "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
          "verificationkey": "xsuaa-0-credentials-verificationkey",
          "xsappname": "afc-dev!t5874",
          "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
        },
        "instance_guid": "e020b20a-eb23-4475-91ec-d525f8738fd7",
        "instance_name": "afc-uaa",
        "label": "xsuaa",
        "name": "afc-uaa",
        "plan": "application",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "xsuaa"
        ],
        "volume_mounts": []
      }
    ]
  }
}
",
]
`;

exports[`srv nock tests srv env default 1`] = `
[
  "default-env.json",
  "{
  "VCAP_APPLICATION": {
    "application_id": "f84d681e-7123-442f-b8ea-2c747c11e145",
    "application_name": "afc-backend",
    "application_uris": [
      "skyfin-dev-afc-backend.cfapps.sap.hana.ondemand.com",
      "skyfin-dev-afc-backend.mesh.cf.sap.hana.ondemand.com"
    ],
    "cf_api": "https://api.cf.sap.hana.ondemand.com",
    "limits": {
      "fds": 32768
    },
    "name": "afc-backend",
    "organization_id": "792854a5-6fa0-456f-bbe7-17a4400fad6c",
    "organization_name": "skyfin",
    "space_id": "0215304c-3d6f-4f02-ae4f-a9bd6a9d46e9",
    "space_name": "dev",
    "uris": [
      "skyfin-dev-afc-backend.cfapps.sap.hana.ondemand.com",
      "skyfin-dev-afc-backend.mesh.cf.sap.hana.ondemand.com"
    ],
    "users": null
  },
  "VCAP_SERVICES": {
    "aicore": [
      {
        "binding_guid": "99028c4d-64d0-4536-a045-efdbd7087d45",
        "binding_name": null,
        "credentials": {
          "appname": "cff72d89-f0b9-4c3d-b1e4-6e26bc874eaf!b5874|xsuaa_std!b77089",
          "clientid": "aicore-0-credentials-clientid",
          "clientsecret": "aicore-0-credentials-clientsecret",
          "credential-type": "binding-secret",
          "identityzone": "skyfin",
          "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "serviceurls": {
            "AI_API_URL": "https://api.ai.internalprod.eu-central-1.aws.ml.hana.ondemand.com/"
          },
          "token-type": [
            "aicore-0-credentials-token-type-0"
          ],
          "url": "https://skyfin.authentication.sap.hana.ondemand.com/"
        },
        "instance_guid": "cff72d89-f0b9-4c3d-b1e4-6e26bc874eaf",
        "instance_name": "afc-aicore",
        "label": "aicore",
        "name": "afc-aicore",
        "plan": "sap-internal",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      }
    ],
    "application-logs": [
      {
        "binding_guid": "fb417128-16b7-48c8-bdea-f7770d658c9a",
        "binding_name": null,
        "credentials": {},
        "instance_guid": "393a971c-77c1-4930-a373-f7345e2b2527",
        "instance_name": "afc-logs",
        "label": "application-logs",
        "name": "afc-logs",
        "plan": "standard",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      }
    ],
    "auditlog": [
      {
        "binding_guid": "4171224c-584e-4ff1-96c5-e023c1c833fa",
        "binding_name": null,
        "credentials": {
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "clientid": "auditlog-0-credentials-uaa-clientid",
            "clientsecret": "auditlog-0-credentials-uaa-clientsecret",
            "credential-type": "binding-secret",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "d2761c94-ee8f-47a8-8570-166d28321df3",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "dedicated",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "auditlog-0-credentials-uaa-verificationkey",
            "xsappname": "d2761c94-ee8f-47a8-8570-166d28321df3!b5874|auditlog!b4",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          },
          "url": "https://api.auditlog.cf.sap.hana.ondemand.com/",
          "vendor": "SAP"
        },
        "instance_guid": "d2761c94-ee8f-47a8-8570-166d28321df3",
        "instance_name": "afc-auditlog",
        "label": "auditlog",
        "name": "afc-auditlog",
        "plan": "oauth2",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "auditlog",
          "audit log",
          "cf"
        ],
        "volume_mounts": []
      }
    ],
    "autoscaler": [
      {
        "binding_guid": "e9dd8657-cd50-4399-b620-cbb1fe40d606",
        "binding_name": null,
        "credentials": {
          "custom_metrics": {
            "mtls_url": "https://autoscaler-metrics-mtls.cf.sap.hana.ondemand.com/"
          }
        },
        "instance_guid": "015ba89e-44e6-4316-a250-9ccbf2d9267e",
        "instance_name": "afc-autoscaler",
        "label": "autoscaler",
        "name": "afc-autoscaler",
        "plan": "standard",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "autoscaler",
          "app-autoscaler",
          "cf-autoscaler"
        ],
        "volume_mounts": []
      }
    ],
    "business-logging": [
      {
        "binding_guid": "12dc772c-1d94-4e6b-bddb-f7d205ef1f8d",
        "binding_name": null,
        "credentials": {
          "LPSCallbackDependencyName": "businesslogging-sb-prod",
          "configUrl": "https://buslog-prod-business-logging-core-service-appconfig.cfapps.sap.hana.ondemand.com/",
          "configurationPath": "buslogs/configs",
          "content_endpoint": "https://buslog-prod-business-logging-core-service-appconfig.cfapps.sap.hana.ondemand.com/buslogs/content",
          "endpoints": {
            "configservice": "https://buslog-prod-business-logging-core-service-appconfig.cfapps.sap.hana.ondemand.com/buslogs/configs",
            "readservice": "https://buslog-prod-business-logging-odata-service.cfapps.sap.hana.ondemand.com/odata/v2/com.sap.bs.businesslogging.DisplayMessage",
            "readservicev4": "https://buslog-prod-business-logging-odata-service.cfapps.sap.hana.ondemand.com/odata/v4/com.sap.bs.businesslogging.DisplayMessage",
            "textresourceservice": "https://buslog-prod-business-logging-core-service-appconfig.cfapps.sap.hana.ondemand.com/buslogs/configs/textresource",
            "writeservice": "https://buslog-prod-business-logging-write-service.cfapps.sap.hana.ondemand.com/buslogs/log"
          },
          "host": "business-logging-0-credentials-host",
          "html5-apps-repo": {
            "app_host_id": "99fe3965-708a-43bf-9fdf-33206e55010c"
          },
          "instanceId": "3c6e7048-f419-45ab-861b-1d500ed9a872",
          "readLogPath": "/odata/v2/com.sap.bs.businesslogging.DisplayMessage",
          "readLogPathv4": "/odata/v4/com.sap.bs.businesslogging.DisplayMessage",
          "readUrl": "https://buslog-prod-business-logging-odata-service.cfapps.sap.hana.ondemand.com/",
          "saasregistryappname": "businesslogging-sb-prod",
          "saasregistryenabled": true,
          "sap.cloud.service": "com.sap.bs.businesslogging",
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "certificate": "business-logging-0-credentials-uaa-certificate",
            "certificate-pinning": true,
            "certurl": "https://skyfin.authentication.cert.sap.hana.ondemand.com/",
            "clientid": "business-logging-0-credentials-uaa-clientid",
            "clientx509enabled": false,
            "credential-type": "x509",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "key": "business-logging-0-credentials-uaa-key",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "3c6e7048-f419-45ab-861b-1d500ed9a872",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "dedicated",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "business-logging-0-credentials-uaa-verificationkey",
            "xsappname": "afc-dev!b5874|businesslogging-sb-prod!b3598",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          },
          "vendor": "SAP",
          "writeLogPath": "buslogs/log",
          "writeUrl": "https://buslog-prod-business-logging-write-service.cfapps.sap.hana.ondemand.com/"
        },
        "instance_guid": "3c6e7048-f419-45ab-861b-1d500ed9a872",
        "instance_name": "afc-business-logging",
        "label": "business-logging",
        "name": "afc-business-logging",
        "plan": "default",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "business-logging",
          "logging",
          "com.sap.appbasic.businesslogs",
          "comsapappbasicbusinesslogs"
        ],
        "volume_mounts": []
      }
    ],
    "certificate-service": [
      {
        "binding_guid": "fa543457-3962-488c-90a4-b7a99474b499",
        "binding_name": null,
        "credentials": {
          "certificateservice": {
            "apiurl": "https://certificate-service.cf.sap.hana.ondemand.com/",
            "policy": "sap-cloud-platform-clients",
            "profileurl": "https://certificate-service.cf.sap.hana.ondemand.com/certservice/v2/enroll/standard",
            "subjectpattern": "C=DE, O=SAP SE, OU=SAP Cloud Platform Clients, OU=Canary, OU=7b20408e-3fe0-4ade-aa2e-ad97baac72e8, L=%s, CN=%s"
          },
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "clientid": "certificate-service-0-credentials-uaa-clientid",
            "clientsecret": "certificate-service-0-credentials-uaa-clientsecret",
            "credential-type": "binding-secret",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "bc85eb47-2b47-4544-b1de-821d11137d24",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "dedicated",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "certificate-service-0-credentials-uaa-verificationkey",
            "xsappname": "bc85eb47-2b47-4544-b1de-821d11137d24!b5874|certificate-service!b17617",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          }
        },
        "instance_guid": "bc85eb47-2b47-4544-b1de-821d11137d24",
        "instance_name": "afc-certificate",
        "label": "certificate-service",
        "name": "afc-certificate",
        "plan": "standard",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      }
    ],
    "connectivity": [
      {
        "binding_guid": "920bf04a-aa73-4878-a608-84d0bb353a9f",
        "binding_name": null,
        "credentials": {
          "clientid": "connectivity-0-credentials-clientid",
          "clientsecret": "connectivity-0-credentials-clientsecret",
          "credential-type": "binding-secret",
          "identityzone": "skyfin",
          "onpremise_proxy_host": "connectivityproxy.internal.cf.sap.hana.ondemand.com",
          "onpremise_proxy_http_port": "20003",
          "onpremise_proxy_ldap_port": "20001",
          "onpremise_proxy_port": "20003",
          "onpremise_proxy_rfc_port": "20001",
          "onpremise_socks5_proxy_port": "20004",
          "region_configuration_id": "cf-eu10-canary",
          "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "tenantmode": "dedicated",
          "token-type": [
            "connectivity-0-credentials-token-type-0"
          ],
          "token_service_domain": "connectivity-0-credentials-token_service_domain",
          "token_service_url": "connectivity-0-credentials-token_service_url",
          "uaadomain": "authentication.sap.hana.ondemand.com",
          "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
          "verificationkey": "connectivity-0-credentials-verificationkey",
          "xsappname": "clone43c89feaa7e14781a446eca57e3748b5!b5874|connectivity!b137"
        },
        "instance_guid": "43c89fea-a7e1-4781-a446-eca57e3748b5",
        "instance_name": "afc-connectivity",
        "label": "connectivity",
        "name": "afc-connectivity",
        "plan": "lite",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "connectivity",
          "conn",
          "connsvc"
        ],
        "volume_mounts": []
      }
    ],
    "destination": [
      {
        "binding_guid": "af9d6a3c-fa3f-44fd-8cc6-aaab75097297",
        "binding_name": null,
        "credentials": {
          "clientid": "destination-0-credentials-clientid",
          "clientsecret": "destination-0-credentials-clientsecret",
          "credential-type": "binding-secret",
          "identityzone": "skyfin",
          "instanceid": "05ed0260-5f01-499a-b077-2a3cafc5eac3",
          "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "tenantmode": "dedicated",
          "token-type": [
            "destination-0-credentials-token-type-0"
          ],
          "uaadomain": "authentication.sap.hana.ondemand.com",
          "uri": "https://destination-configuration.cfapps.sap.hana.ondemand.com/",
          "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
          "verificationkey": "destination-0-credentials-verificationkey",
          "xsappname": "clone05ed02605f01499ab0772a3cafc5eac3!b5874|destination-xsappname!b433"
        },
        "instance_guid": "05ed0260-5f01-499a-b077-2a3cafc5eac3",
        "instance_name": "afc-destination",
        "label": "destination",
        "name": "afc-destination",
        "plan": "lite",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "destination",
          "conn",
          "connsvc"
        ],
        "volume_mounts": []
      }
    ],
    "dynatrace": [
      {
        "binding_guid": "578d0ac4-7fdf-42c4-b470-3f87a49c6f4b",
        "binding_name": null,
        "credentials": {
          "apitoken": "dynatrace-0-credentials-apitoken",
          "apiurl": "https://canary.eu10.apm.services.cloud.sap/e/99479865-a86b-4792-a740-fc62388b3496/api",
          "environmentid": "99479865-a86b-4792-a740-fc62388b3496",
          "ingest_apitoken": "dynatrace-0-credentials-ingest_apitoken",
          "skiperrors": "true",
          "token_expiry": "dynatrace-0-credentials-token_expiry"
        },
        "instance_guid": "b37ed912-457a-43da-856c-20ded42fd748",
        "instance_name": "afc-dynatrace",
        "label": "dynatrace",
        "name": "afc-dynatrace",
        "plan": "environment",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "dynatrace"
        ],
        "volume_mounts": []
      }
    ],
    "identity": [
      {
        "binding_guid": "cceb4160-e9ee-48ad-baf8-9cf5b5c9668d",
        "binding_name": null,
        "credentials": {
          "app_tid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "authorization_endpoint": "https://awdsp8ef4.accounts400.ondemand.com/oauth2/authorize",
          "btp-tenant-api": "https://api.authentication.sap.hana.ondemand.com",
          "certificate": "identity-0-credentials-certificate",
          "certificate_expires_at": "2026-09-23T20:03:46Z",
          "clientid": "identity-0-credentials-clientid",
          "credential-type": "X509_GENERATED",
          "domain": "accounts400.ondemand.com",
          "domains": [
            "accounts400.ondemand.com",
            "accounts400.cloud.sap"
          ],
          "end_session_endpoint": "https://awdsp8ef4.accounts400.ondemand.com/oauth2/logout",
          "key": "identity-0-credentials-key",
          "url": "https://awdsp8ef4.accounts400.ondemand.com/"
        },
        "instance_guid": "f999651e-8c35-467b-822e-518554570a04",
        "instance_name": "afc-ias",
        "label": "identity",
        "name": "afc-ias",
        "plan": "application",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      }
    ],
    "malware-scanner": [
      {
        "binding_guid": "f67f5555-06f8-43ce-ae5f-a1d76f5e1666",
        "binding_name": null,
        "credentials": {
          "async_scan_url": "",
          "password": "malware-scanner-0-credentials-password",
          "sync_scan_url": "https://malware-scanner.cf.sap.hana.ondemand.com/",
          "uri": "malware-scanner.cf.sap.hana.ondemand.com/",
          "url": "https://malware-scanner.cf.sap.hana.ondemand.com/",
          "username": "malware-scanner-0-credentials-username"
        },
        "instance_guid": "e188bf3f-4e52-4c14-ba89-3d05eaeeeff2",
        "instance_name": "afc-malware-scanner",
        "label": "malware-scanner",
        "name": "afc-malware-scanner",
        "plan": "clamav",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      }
    ],
    "redis-cache": [
      {
        "binding_guid": "d9c30853-b03d-4073-a971-8f8a2a724a1b",
        "binding_name": null,
        "credentials": {
          "cluster_mode": true,
          "hostname": "clustercfg.rg-0c94f0c1-db0a-495d-b385-4a44a87fc398.vwvwdz.euc1.cache.amazonaws.com",
          "password": "redis-cache-0-credentials-password",
          "port": 3991,
          "tls": true,
          "uri": "rediss://:redis-cache-0-credentials-uri-password@clustercfg.rg-0c94f0c1-db0a-495d-b385-4a44a87fc398.vwvwdz.euc1.cache.amazonaws.com:3991",
          "urls": {
            "api_server": "https://api-backing-services.eu10-canary.data.services.cloud.sap"
          }
        },
        "instance_guid": "0c94f0c1-db0a-495d-b385-4a44a87fc398",
        "instance_name": "afc-redis",
        "label": "redis-cache",
        "name": "afc-redis",
        "plan": "standard",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "cache"
        ],
        "volume_mounts": []
      }
    ],
    "service-manager": [
      {
        "binding_guid": "df5f18f9-e694-418b-875a-47d5b998e0a1",
        "binding_name": null,
        "credentials": {
          "certificate": "service-manager-0-credentials-certificate",
          "certurl": "https://skyfin.authentication.cert.sap.hana.ondemand.com/",
          "clientid": "service-manager-0-credentials-clientid",
          "key": "service-manager-0-credentials-key",
          "sm_url": "https://service-manager.cfapps.sap.hana.ondemand.com/",
          "uaadomain": "authentication.sap.hana.ondemand.com",
          "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
          "xsappname": "51ddd18b-5a78-418e-8f41-9a4c518650ec!b5874|service-manager!b4065"
        },
        "instance_guid": "51ddd18b-5a78-418e-8f41-9a4c518650ec",
        "instance_name": "afc-service-manager",
        "label": "service-manager",
        "name": "afc-service-manager",
        "plan": "container",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [],
        "volume_mounts": []
      }
    ],
    "user-provided": [
      {
        "binding_guid": "38494c17-f237-4867-9260-5fba6f61e4d2",
        "binding_name": null,
        "credentials": {},
        "instance_guid": "9c12b0fb-ab43-46fc-94e4-82eab5e541ce",
        "instance_name": "afc-logging-hub",
        "label": "user-provided",
        "name": "afc-logging-hub",
        "syslog_drain_url": "https://user-provided-0-syslog_drain_url-username:user-provided-0-syslog_drain_url-password@ingest-sf-068034bc-13cf-4be3-9589-3a751c760bea.cls-01.cloud.logs.services.sap.hana.ondemand.com/cfsyslog",
        "tags": [
          "cloud-logging"
        ],
        "volume_mounts": []
      },
      {
        "binding_guid": "4cb9471d-a885-4f63-9de2-9ad724b6abcb",
        "binding_name": null,
        "credentials": {
          "pass": "user-provided-1-credentials-pass",
          "user": "user-provided-1-credentials-user"
        },
        "instance_guid": "9f484b06-5918-4c1c-9ae1-aa2faa351469",
        "instance_name": "afc-mail-service",
        "label": "user-provided",
        "name": "afc-mail-service",
        "syslog_drain_url": "",
        "tags": [],
        "volume_mounts": []
      },
      {
        "binding_guid": "82912f5e-cd33-495d-b814-f390e0b91d54",
        "binding_name": null,
        "credentials": {
          "endpoints": {
            "credentials_url": "https://clm-sl-ans-canary-ans-service-api.cfapps.sap.hana.ondemand.com/api",
            "notifications_mtls_url": "https://clm-sl-ans-canary-ans-service-api.mesh.cf.sap.hana.ondemand.com/",
            "notifications_url": "https://clm-sl-ans-canary-ans-service-api.cfapps.sap.hana.ondemand.com/",
            "websockets_url": "https://clm-sl-ans-canary-ans-service-api.cfapps.sap.hana.ondemand.com/"
          },
          "grant_type": "user_token",
          "saasregistryenabled": true,
          "sap.cloud.service": "alert-notification",
          "uaa": {
            "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
            "clientid": "user-provided-2-credentials-uaa-clientid",
            "clientsecret": "user-provided-2-credentials-uaa-clientsecret",
            "credential-type": "binding-secret",
            "identityzone": "skyfin",
            "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
            "serviceInstanceId": "e9f2bb15-1b46-4ea6-8530-a89508081ec4",
            "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
            "tenantmode": "shared",
            "uaadomain": "authentication.sap.hana.ondemand.com",
            "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
            "verificationkey": "user-provided-2-credentials-uaa-verificationkey",
            "xsappname": "e9f2bb15-1b46-4ea6-8530-a89508081ec4!b5874|ans-business!b2187",
            "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
          }
        },
        "instance_guid": "44cd8c4e-b1f3-4e69-a4fb-79e95570c017",
        "instance_name": "afc-ans-user-maintained",
        "label": "user-provided",
        "name": "afc-ans-user-maintained",
        "syslog_drain_url": null,
        "tags": [
          "alert-notification"
        ],
        "volume_mounts": []
      }
    ],
    "xsuaa": [
      {
        "binding_guid": "8fc0da15-d080-44b1-bfd4-50c23b8becaa",
        "binding_name": null,
        "credentials": {
          "apiurl": "https://api.authentication.sap.hana.ondemand.com/",
          "certificate": "xsuaa-0-credentials-certificate",
          "certificate-pinning": true,
          "certurl": "https://skyfin.authentication.cert.sap.hana.ondemand.com/",
          "clientid": "xsuaa-0-credentials-clientid",
          "clientx509enabled": false,
          "credential-type": "x509",
          "identityzone": "skyfin",
          "identityzoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "key": "xsuaa-0-credentials-key",
          "sburl": "https://internal-xsuaa.authentication.sap.hana.ondemand.com/",
          "serviceInstanceId": "e020b20a-eb23-4475-91ec-d525f8738fd7",
          "subaccountid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "tenantid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8",
          "tenantmode": "shared",
          "uaadomain": "authentication.sap.hana.ondemand.com",
          "url": "https://skyfin.authentication.sap.hana.ondemand.com/",
          "verificationkey": "xsuaa-0-credentials-verificationkey",
          "xsappname": "afc-dev!t5874",
          "zoneid": "7b20408e-3fe0-4ade-aa2e-ad97baac72e8"
        },
        "instance_guid": "e020b20a-eb23-4475-91ec-d525f8738fd7",
        "instance_name": "afc-uaa",
        "label": "xsuaa",
        "name": "afc-uaa",
        "plan": "application",
        "provider": null,
        "syslog_drain_url": null,
        "tags": [
          "xsuaa"
        ],
        "volume_mounts": []
      }
    ]
  }
}
",
]
`;
